<resources>
    <string name="app_name">ExampleProject</string>

    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_rotation">Rotation</string>
    <string name="common_capture">Capture</string>

    <string name="common_notice">Notice</string>

    <string name="msg_example_deleted">This example is deleted.</string>
    <string name="msg_need_permission">Need permission to run</string>

    <string name="item_title_social_login">Social Login</string>
    <string name="item_title_rx_basic">Rx Basic</string>
    <string name="item_title_databinding_example">Databinding Example</string>
    <string name="item_title_simple_translator">Simple Translator</string>
    <string name="item_title_google_map">Google Map</string>
    <string name="item_title_recyclerview_with_ad">RecyclerView With Ad</string>
    <string name="item_title_constraintlayout">ConstraintLayout</string>
    <string name="item_title_collapsing_toolbar">Collapsing Toolbar</string>
    <string name="item_title_range_chart">Range Chart</string>
    <string name="item_title_zigzag_filter">Zigzag Filter</string>
    <string name="item_title_room_example">Room Example</string>
    <string name="item_title_base_recylcerview">Base RecyclerView</string>
    <string name="item_title_xml_parsing">Xml Parsing</string>
    <string name="item_title_exo_player">Exo Player</string>
    <string name="item_title_mvp_practice">MVP Practice (Equal RxBasic)</string>
    <string name="item_title_opencv">OpenCV</string>
    <string name="item_title_koin">Koin</string>

    <string name="sub_item_title_exo_single_video">Single Video</string>
    <string name="sub_item_title_exo_video_list">Video List</string>

    <string name="social_tv_default">Logout State</string>
    <string name="social_tv_logint_format">%s Login State</string>

    <string name="rxbasic_et_hint">Input User Name</string>
    <string name="rxbasic_msg_search_failed">GitData Search Failed</string>
    <string name="rxbasic_profile_link_title">프로필 보기</string>
    <string name="rxbasic_loading">Loading...</string>
    <string name="rxbasic_empty_dataset">해당 사용자의 GitHub를 찾을 수 없습니다.</string>

    <string name="databinding_example_btn_dec">-</string>
    <string name="databinding_example_btn_inc">+</string>
    <string name="databinding_example_explain_1">Simple Counter, if under 0, text color is red</string>
    <string name="databinding_example_explain_2">Input display immediately on TextView</string>
    <string name="databinding_example_explain_3">TextView color chnaged by spinner</string>

    <string name="simple_translator_hint_input">Input Korean</string>
    <string name="simple_translator_copy_clipboard">Translation Result</string>
    <string name="simple_translator_msg_copy_clipboard">Result Copied</string>
    <string name="simple_translator_msg_empty_text">Result is empty</string>

    <string name="google_map_msg_permission_denied">Permission denied</string>
    <string name="google_map_title_location_service_setting">Location service setting</string>
    <string name="google_map_msg_location_service_setting">Use GPS service?</string>

    <string name="recyclerview_with_ad_ad_text">Sponsored</string>

    <string name="constraintlayout_title">ConstraintLayout Example</string>
    <string name="constraintlayout_description">This is ConstraintLayout Desc\nThis is ConstraintLayout Desc\nThis is
        ConstraintLayout Desc
    </string>
    <string name="constraintlayout_next">Next</string>
    <string name="constraintlayout_cancel">Cancel</string>
    <string name="constraintlayout_msg_final_step">End.</string>

    <string name="collapsing_toolbar_name">Name</string>
    <string name="collapsing_toolbar_info1">Info 1</string>
    <string name="collapsing_toolbar_info2">Info 2</string>
    <string name="collapsing_toolbar_like">Like</string>
    <string name="collapsing_toolbar_story">Story</string>
    <string name="collapsing_toolbar_Introduction">Introduction</string>

    <string name="zigzag_filter_price_title">가격</string>
    <string name="zigzag_filter_color_title">색상</string>
    <string name="zigzag_filter_dialog_btn_title">선택</string>
    <string name="zigzag_filter_dialog_clear_btn_title">초기화</string>
    <string name="zigzag_filter_dialog_confirm_btn_title">선택</string>

    <string name="git_test">Git Test</string>
    <string name="title_activity_zigzag_filter">ZigzagFilterActivity</string>

    <string name="room_example_empty_item">Data set is empty</string>
    <string name="room_dialog_hint_name">Input Name</string>
    <string name="room_dialog_hint_desc">Input Description</string>
    <string name="room_dialog_btn_cancel">@string/common_cancel</string>
    <string name="room_dialog_btn_add">Add</string>
    <string name="room_dialog_btn_update">Update</string>
    <string name="room_delete_dialog_title">Alert</string>
    <string name="room_delete_dialog_msg">Delete this item?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
