<?xml version="1.0" encoding="utf-8"?>
<com.mdlicht.zb.exampleproject.collapsingtoolbar.view.CollapsingConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:minHeight="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

    <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent" android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/collapsing_toolbar_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:id="@+id/tvInfo2" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/collapsing_toolbar_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:id="@+id/tvInfo1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvInfo2" app:layout_constraintStart_toStartOf="@+id/tvInfo2"
            android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/collapsing_toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvName" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tvInfo1" app:layout_constraintStart_toStartOf="@+id/tvInfo1"
            android:textSize="18sp" android:textStyle="bold" android:textColor="@android:color/white"/>

</com.mdlicht.zb.exampleproject.collapsingtoolbar.view.CollapsingConstraintLayout>