<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="com.mdlicht.zb.exampleproject.constraintlayout.viewmodel.ConstraintViewModel"/>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils.TruncateAt"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".constraintlayout.activity.ConstraintLayoutActivity">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/ivImg"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/constraintlayout_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/ivImg"
                app:layout_constraintTop_toTopOf="@+id/ivImg"
                app:layout_constraintBottom_toBottomOf="@+id/ivImg" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textStyle="bold" android:textSize="18sp"/>
        <TextView
                android:text="@string/constraintlayout_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="@{!vm.isNextStep}"
                android:ellipsize="end"
                android:id="@+id/tvDesc" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ivImg" app:layout_constraintStart_toStartOf="@+id/ivImg"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/constraintlayout_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnNextStep"
                android:onClick="@{view -> vm.onNextClick(view, btnCancel.getVisibility() == View.VISIBLE)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/btnCancel"/>
        <Button
                android:text="@string/constraintlayout_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{view -> vm.onCancelClick(view)}"
                android:visibility="@{!vm.isNextStep ? View.GONE : View.VISIBLE}"
                android:id="@+id/btnCancel" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{!vm.isNextStep ? View.GONE : View.VISIBLE}"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnNextStep"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvDesc"
                android:id="@+id/rvContents"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>