<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="com.mdlicht.zb.exampleproject.zigzagfilter.viewmodel.ZigZagFilterViewModel"/>
        <variable name="activity" type="com.mdlicht.zb.exampleproject.zigzagfilter.activity.ZigzagFilterActivity"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".zigzagfilter.activity.ZigzagFilterActivity">
        <Button
                android:text="@string/zigzag_filter_dialog_btn_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnDialog" app:layout_constraintStart_toStartOf="@+id/tvColor"
                app:layout_constraintEnd_toEndOf="@+id/tvColor"
                android:layout_marginTop="16dp"
                android:onClick="@{v -> activity.onClickOpenDialog(v)}"
                app:layout_constraintTop_toBottomOf="@+id/tvColor"/>
        <TextView
                android:text="@string/zigzag_filter_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:id="@+id/tvPriceTitle" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvPrice"
                app:layout_constraintStart_toStartOf="@+id/tvPriceTitle"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvPriceTitle"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/zigzag_filter_color_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorTextPrimary"
                android:id="@+id/tvColorTitle" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                app:layout_constraintStart_toStartOf="@+id/tvPrice"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvColor"
                app:layout_constraintTop_toBottomOf="@+id/tvColorTitle"
                app:layout_constraintStart_toStartOf="@+id/tvColorTitle"
                app:layout_constraintEnd_toEndOf="@+id/tvPrice" android:layout_marginTop="8dp"/>
    </android.support.constraint.ConstraintLayout>
</layout>