<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="vm" type="com.mdlicht.zb.exampleproject.databinding.viewmodel.DatabindingExampleViewModel"/>
        <import type="android.graphics.Color"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".databinding.activity.DatabindingExampleActivity">

        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_box"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/constraintLayout" app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                app:layout_constraintHorizontal_bias="0.5">

            <TextView
                    android:text="@{vm.color.name}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@{vm.color.color != null ? Color.parseColor(vm.color.color) : Color.parseColor(`#ffffff`)}"
                    android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/spinner"
                    app:layout_constraintStart_toStartOf="@+id/spinner"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spinner"
                    android:padding="8dp" android:textStyle="bold" android:textColor="@android:color/white"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <android.support.v7.widget.AppCompatSpinner
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    app:selectedValue="@={vm.color}"
                    android:id="@+id/spinner"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="@+id/textView4"/>
            <TextView
                    android:text="@string/databinding_example_explain_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textStyle="bold"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="141dp"
                android:background="@drawable/shape_round_box"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                android:id="@+id/constraintLayout2" app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                app:layout_constraintHorizontal_bias="0.5">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:text="@={vm.text}"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    android:gravity="center"
                    android:background="#d5d5d5"
                    android:text="@{vm.text}" android:padding="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"/>
            <TextView
                    android:text="@string/databinding_example_explain_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:textStyle="bold"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round_box"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/constraintLayout3" app:layout_constraintHorizontal_bias="0.5">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/button2" android:textStyle="bold" android:textSize="30sp"
                    android:gravity="center" android:text="@={vm.count+``}"
                    android:textColor="@{vm.count &lt; 0 ? @color/databinding_example_red : @color/databinding_example_default}"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_chainStyle="spread"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="8dp"/>
            <Button
                    android:text="@string/databinding_example_btn_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/button3"
                    app:layout_constraintHorizontal_chainStyle="packed" android:textSize="18sp"
                    android:onClick="@{() -> vm.onDecClick()}"
                    app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                    android:text="@string/databinding_example_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/button2" android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.5" android:textSize="18sp"
                    android:onClick="@{() -> vm.onIncClick()}"
                    app:layout_constraintTop_toTopOf="@+id/button2"/>
            <TextView
                    android:text="@string/databinding_example_explain_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:textStyle="bold"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>